estilização dos boards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h3>A fazer</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
-                <div class="status"></div>
+                <div class="status blue"></div>
                 <div class="content">Organizar a mesa</div>
             </div>
         </div>
@@ -35,7 +35,7 @@
         <h3>Em progresso</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
-                <div class="status"></div>
+                <div class="status yellow"></div>
                 <div class="content">Fazer kanban board</div>
             </div>
         </div>
@@ -44,7 +44,7 @@
         <h3>Terminado</h3>
         <div class="dropzone">
             <div class="postIt">
-                <div class="status"></div>
+                <div class="status green"></div>
                 <div class="content">Arrumar a cama</div>
             </div>
         </div>
