--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="board">
         <h3>Terminado</h3>
         <div class="dropzone">
-            <div class="postIt">
+            <div class="postIt" draggable="true">
                 <div class="status green"></div>
                 <div class="content">Arrumar a cama</div>
             </div>
