--- a/index.html
+++ b/index.html
@@ -22,29 +22,34 @@
 <hr>
 
 <div class="mainBoard">
-    <div class="board">
+    <div class="addtask">
+        <h2>Adicione sua nova tarefa</h2>
+        <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
+        <button class="BtnNewTask">Adicionar</button>
+    </div>
+    <div class="board toDo">
         <h3>A fazer</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
-                <div class="status blue"></div>
                 <div class="content">Organizar a mesa</div>
+            </div>
+            <div class="postIt" draggable="true">
+                <div class="content">PIPIOPOPO</div>
             </div>
         </div>
     </div>
-    <div class="board">
+    <div class="board doing">
         <h3>Em progresso</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
-                <div class="status yellow"></div>
                 <div class="content">Fazer kanban board</div>
             </div>
         </div>
     </div>
-    <div class="board">
+    <div class="board done">
         <h3>Terminado</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
-                <div class="status green"></div>
                 <div class="content">Arrumar a cama</div>
             </div>
         </div>
@@ -53,5 +58,4 @@
 
 <script src="./script.js"></script>
 </body>
-
 </html>
