--- a/index.html
+++ b/index.html
@@ -25,16 +25,13 @@
     <div class="addtask">
         <h2>Adicione sua nova tarefa</h2>
         <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
-        <button class="BtnNewTask">Adicionar</button>
+        <button type="submit" class="BtnNewTask">Adicionar</button>
     </div>
     <div class="board toDo">
         <h3>A fazer</h3>
         <div class="dropzone">
             <div class="postIt" draggable="true">
                 <div class="content">Organizar a mesa</div>
-            </div>
-            <div class="postIt" draggable="true">
-                <div class="content">PIPIOPOPO</div>
             </div>
         </div>
     </div>
