comenta postIts do html e corrige comentantário do script!

--- a/index.html
+++ b/index.html
@@ -27,28 +27,29 @@
         <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
         <button type="submit" class="BtnNewTask">Adicionar</button>
     </div>
+    
     <div class="board toDo">
         <h3>A fazer</h3>
         <div class="dropzone">
-            <div class="postIt" draggable="true">
+            <!-- <div class="postIt" draggable="true">
                 <div class="content">Organizar a mesa</div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="board doing">
         <h3>Em progresso</h3>
         <div class="dropzone">
-            <div class="postIt" draggable="true">
+            <!-- <div class="postIt" draggable="true">
                 <div class="content">Fazer kanban board</div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="board done">
         <h3>Terminado</h3>
         <div class="dropzone">
-            <div class="postIt" draggable="true">
+            <!-- <div class="postIt" draggable="true">
                 <div class="content">Arrumar a cama</div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
