added variaveis de cores e favicon

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- FONTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="assets/check.png" />
 
     <title>Simple kanban board</title>
 </head>
@@ -27,7 +29,7 @@
         <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
         <button type="submit" class="BtnNewTask">Adicionar</button>
     </div>
-    
+
     <div class="board toDo">
         <h3>A fazer</h3>
         <div class="dropzone">
@@ -57,4 +59,5 @@
 <footer></footer>
 <script src="./script.js"></script>
 </body>
+
 </html>
