--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <!-- FONTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Merriweather+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
 
     <!-- FAVICON -->
     <link rel="shortcut icon" href="assets/check.png" />
@@ -18,8 +17,9 @@
     <title>Simple kanban board</title>
 </head>
 <header>
-    <h3>Minha lista de tarefas</h3>
-    <p>Digite sua tarefa e clique em enviar para ser adicionada ao seu mural</p>
+    <h3>Seja bem-vindo(a)!</h3>
+    <br>
+    <p>Fique à vontade para criar uma nova tarefa e arrasta-la de acordo seu status.</p>
 </header>
 <hr>
 
