--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="mainBoard">
     <div class="addtask">
-        <h2>Adicione sua nova tarefa</h2>
+        <h2>Nova tarefa</h2>
         <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
         <button type="submit" class="BtnNewTask">Adicionar</button>
     </div>
