--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
 <hr>
 
 <div class="mainBoard">
-    <div class="addtask">
+    <div class="addTask">
         <h2>Nova tarefa</h2>
-        <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
-        <button type="submit" class="BtnNewTask">Adicionar</button>
-    </div>
+        <span>
+            <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
+            <button type="submit" class="BtnNewTask">Adicionar</button>
+        </span>
+        </div>
 
     <div class="board toDo">
         <h3>A fazer</h3>
+        <hr>
         <div class="dropzone">
             <!-- <div class="postIt" draggable="true">
                 <div class="content">Organizar a mesa</div>
@@ -40,6 +43,7 @@
     </div>
     <div class="board doing">
         <h3>Em progresso</h3>
+        <hr>
         <div class="dropzone">
             <!-- <div class="postIt" draggable="true">
                 <div class="content">Fazer kanban board</div>
@@ -48,6 +52,7 @@
     </div>
     <div class="board done">
         <h3>Terminado</h3>
+        <hr>
         <div class="dropzone">
             <!-- <div class="postIt" draggable="true">
                 <div class="content">Arrumar a cama</div>
