added aviso sobre delete e termina estilização provisória

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             <input type="text" name="newTask" id="newTask" placeholder="Digite sua nova tarefa">
             <button type="submit" class="BtnNewTask">Adicionar</button>
         </span>
+        <br><br><br><br>
+        <div class="note">
+            <h3>ATENÇÃO</h3>
+            <p>Para deletar uma tarefa basta clicar duas vezes sobre ela</p>
+        </div>
         </div>
 
     <div class="board toDo">
